# zotimer

./: .gitignore  Cargo.toml  Dockerfile  Makefile  flake.nix  shell.nix
src/: main.rs
