[package]
name = "zotimer"
version = "0.1.0"
authors = ["Agung Baptiso Sorlawan <agung.sorlawan@prosa.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
chrono = "0.4"
parse_duration = "2.1"
rodio = "0.11"
clap = "2.33"
ansi_term = "0.12.1"
